# database_from_scratch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
